[package]
name = "aoc_2015"
version = "0.1.0"
authors = ["hardliner66 <hardliner66@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
char_combinator = "1.0.0"
hex = "0.4.2"
md5 = "0.7.0"
serde = "1.0.117"
serde_json = "1.0.59"
